<resources>
    <string name="app_name">AirWrk-Quiz</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="view_history">View History</string>
    <string name="next">Next</string>
    <string name="congratulation_">Congratulations!</string>
    <string name="you_are_passed">You\'re passed</string>
    <string name="you_are_failed">You\'re failed</string>
    <string name="taken_time">Time taken</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="wrong_answer">Wrong Answer</string>
    <string name="question_skipped">Question Skipped</string>
    <string name="negative_marking">Negative Marking</string>
    <string name="not_applicable">Not Applicable</string>
    <string name="your_score">Your Score</string>
    <string name="retry">Retry</string>
    <string name="retake_result">Retake Result</string>
    <string name="sorry_">Sorry!!!</string>
    <string name="quiz_history">Quiz History</string>
    <string name="quiz_details">Quiz Details</string>
    <string name="time_s_up">Time\'s up!</string>
</resources>